test/functions/deitz/iterators/test_param_iterator_error.good
test_param_iterator_error.chpl:1: error: iterators may not yield or return parameters
